test/assets/invalid/signatures/swap.hs
a :: Int -> String
a x = fromIntegral 1 :: Int

b = a "A"